ETS-1448 ETS-1585 ETS-1586 Adds more details to the navigation and fixes unscrollable backrgound on ios safari

--- a/source/scss/components/header-menu/_header-menu.scss
+++ b/source/scss/components/header-menu/_header-menu.scss
@@ -55,6 +55,12 @@
   background-color: $gray-100;
 }
 
+@include media-breakpoint-down(md) {
+  .header-menu-item-link.active {
+    font-weight: 500;
+  }
+}
+
 //Tablet
 @include media-breakpoint-up(sm) {
   .header-mobile-navigation {
